service Hydration {
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
}

message GetUserRequest {
  string user_id = 1;
}

message GetUserResponse {
  User user = 1 ;
}

message User {
  string name = 1
  string age = 2;
  string display_name = 3;
  Profile profile = 4;
}

message Profile {
  string bio = 1;
  repeated Photo photo = 2;
}

